--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
 
-        <h2 class="musicName"> RISES THE MOON </h2>
+        <h2 class="musicName"> <i>RISES THE MOON</i> </h2>
         <div class="resume">
 
             <img src="https://i.scdn.co/image/ab67616d00001e02bd1c65fed5d5b87132ffe0c4" alt="capa do album"
@@ -29,7 +29,7 @@
             <a href="https://www.youtube.com/watch?v=5e1zT7miep8">ACESSAR</a>
         </div>
 
-        <h2 class="musicName"> SUMMER NIGHTS </h2>
+        <h2 class="musicName"> <i> SUMMER NIGHTS </i></h2>
         <div class="resume">
             <img src="https://i.scdn.co/image/ab67706c0000da84941fbe0fa3b314ef1a29a61c" alt="spotify" class="imagem">
         </div>
@@ -40,7 +40,7 @@
             <a href="https://www.youtube.com/watch?v=NXmRAQ-9Eis">ACESSAR</a>
         </div>
 
-        <h2 class="musicName"> TERRIFIED </h2>
+        <h2 class="musicName"> <i> TERRIFIED </i> </h2>
         <div class="resume">
             <img src="https://i.scdn.co/image/ab67616d00001e0296c218ea47c5da3426bebfce" alt="spotify" class="imagem">
         </div>
@@ -51,7 +51,7 @@
             <a href="https://www.youtube.com/watch?v=LjGekV4UtJQ">ACESSAR</a>
         </div>
 
-        <h2 class="musicName"> WHEREVER WE ARE NOW </h2>
+        <h2 class="musicName"> <i>WHEREVER WE ARE NOW</i> </h2>
         <div class="resume">
             <img src="https://i.scdn.co/image/ab67616d00001e02fa84a0b076685ea2d4c7fb59" alt="spotify" class="imagem">
         </div>
@@ -62,7 +62,7 @@
             <a href="https://www.youtube.com/watch?v=bF2LtqVBWe0">ACESSAR</a>
         </div>
 
-        <h2 class="musicName"> VOLVER </h2>
+        <h2 class="musicName"> <i>VOLVER</i> </h2>
         <div class="resume">
             <img src="https://lastfm.freetls.fastly.net/i/u/300x300/7594b84df5a99d7e78612c39a6537b53.jpg" alt="spotify"
                 class="imagem">
