--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             ARTISTA: LIANA FLORES
         </p>
         <div class="F">
-            <a href="https://www.youtube.com/watch?v=5e1zT7miep8">ACESSAR</a>
+            <a href="https://www.youtube.com/watch?v=5e1zT7miep8">YOUTUBE</a>
+            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">SPOTIFY</a>
         </div>
 
         <h2 class="musicName"> <i> SUMMER NIGHTS </i></h2>
@@ -37,7 +38,8 @@
             ARTISTA: THE MILLENIAL CLUB
         </p>
         <div class="F">
-            <a href="https://www.youtube.com/watch?v=NXmRAQ-9Eis">ACESSAR</a>
+            <a href="https://www.youtube.com/watch?v=NXmRAQ-9Eis">YOUTUBE</a>
+            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">SPOTIFY</a>
         </div>
 
         <h2 class="musicName"> <i> TERRIFIED </i> </h2>
@@ -48,7 +50,8 @@
             ARTISTA: AUSTIN PRINCE
         </p>
         <div class="F">
-            <a href="https://www.youtube.com/watch?v=LjGekV4UtJQ">ACESSAR</a>
+            <a href="https://www.youtube.com/watch?v=LjGekV4UtJQ">YOUTUBE</a>
+            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">SPOTIFY</a>
         </div>
 
         <h2 class="musicName"> <i>WHEREVER WE ARE NOW</i> </h2>
@@ -59,7 +62,8 @@
             ARTISTAS: JOEL BAYLIS, SHELBY HARVEY
         </p>
         <div class="F">
-            <a href="https://www.youtube.com/watch?v=bF2LtqVBWe0">ACESSAR</a>
+            <a href="https://www.youtube.com/watch?v=bF2LtqVBWe0">YOUTUBE</a>
+            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">SPOTIFY</a>
         </div>
 
         <h2 class="musicName"> <i>VOLVER</i> </h2>
@@ -71,7 +75,8 @@
             ARTISTAS: JOÃO MANÔ, COLETIVO CANDIEIRO, DANIEL ALVES
         </p>
         <div class="F">
-            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">ACESSAR</a>
+            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">YOUTUBE</a>
+            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">SPOTIFY</a>
         </div>
     </main>
     <footer>
