--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
         <div class="F">
             <a href="https://www.youtube.com/watch?v=5e1zT7miep8">YOUTUBE</a>
-            <a href="https://www.youtube.com/watch?v=iSLvEJcYazI">SPOTIFY</a>
+            <a href="https://open.spotify.com/intl-pt/track/51Grh1RyUDcMBbpuyUIUHI">SPOTIFY</a>
         </div>
 
         <h2 class="musicName"> <i> SUMMER NIGHTS </i></h2>
