--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <title>MusicRecomendations</title>
 </head>
-
 <body>
-    <header>
-        <h1 class="titulo">
-            MÚSICAS QUE EU GOSTO BASTANTE
-        </h1>
-    </header>
+        <header>
+            <h1 class="titulo">
+                MÚSICAS QUE EU GOSTO BASTANTE
+                </h1>
+                </header>
     <main>
 
         <div class="music" id="parent">
@@ -25,12 +24,12 @@
                 class="imagem" id="child">
                 
             </div>
-            <p>
+            <p id="child">
                 ARTISTA: LIANA FLORES
             </p>
-            <div class="F">
-                <a href="https://www.youtube.com/watch?v=5e1zT7miep8" id="child">YOUTUBE</a>
-                <a href="https://open.spotify.com/intl-pt/track/51Grh1RyUDcMBbpuyUIUHI" id="child">SPOTIFY</a>
+            <div class="F" id="child">
+                <a href="https://www.youtube.com/watch?v=5e1zT7miep8"">YOUTUBE</a>
+                <a href="https://open.spotify.com/intl-pt/track/51Grh1RyUDcMBbpuyUIUHI">SPOTIFY</a>
             </div>
             <div class="deleteButtonContainer">  
              <button onclick="remove()">REMOVER MÚSICA</button>
@@ -113,6 +112,7 @@
         <footer>
             © Copyright 2023. Made By Rodrigo Schaffer
     </footer>
+<script src="script.js"></script>
 </body>
 
 </html>
