--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://open.spotify.com/intl-pt/track/6tQQYvGkmpjWLVmJKc0Rpr">SPOTIFY</a>
             </div>
             <div class="deleteButtonContainer">
-                <a href="https://open.spotify.com/intl-pt/track/51Grh1RyUDcMBbpuyUIUHI">REMOVER MÚSICA</a>
+                <button onclick="remove()">REMOVER MÚSICA</button>
             </div>
             
         </div>
